# Copyright (c) 2020 ARM Limited. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

# List of all connectivity libraries available.
add_library(mbed-802.15.4-rf ${CMAKE_LIBRARY_TYPE})
add_library(mbed-ble ${CMAKE_LIBRARY_TYPE})
add_library(mbed-ble-cordio ${CMAKE_LIBRARY_TYPE})
add_library(mbed-ble-cordio_ll ${CMAKE_LIBRARY_TYPE})
add_library(mbed-cellular ${CMAKE_LIBRARY_TYPE})
add_library(mbed-coap ${CMAKE_LIBRARY_TYPE})
add_library(mbed-emac ${CMAKE_LIBRARY_TYPE})
add_library(mbed-lorawan ${CMAKE_LIBRARY_TYPE})
add_library(mbed-lwipstack ${CMAKE_LIBRARY_TYPE})
add_library(mbed-mbedtls ${CMAKE_LIBRARY_TYPE})
add_library(mbed-nanostack ${CMAKE_LIBRARY_TYPE})
add_library(mbed-nanostack-coap_service ${CMAKE_LIBRARY_TYPE})
add_library(mbed-nanostack-mbed_mesh_api ${CMAKE_LIBRARY_TYPE})
add_library(mbed-nanostack-hal_mbed_cmsis_rtos ${CMAKE_LIBRARY_TYPE})
add_library(mbed-nanostack-sal_stack ${CMAKE_LIBRARY_TYPE})
add_library(mbed-nanostack-sal_stack-event_loop ${CMAKE_LIBRARY_TYPE})
add_library(mbed-nanostack-libservice ${CMAKE_LIBRARY_TYPE})
add_library(mbed-netsocket ${CMAKE_LIBRARY_TYPE})
add_library(mbed-nfc ${CMAKE_LIBRARY_TYPE})
add_library(mbed-ppp ${CMAKE_LIBRARY_TYPE})
add_library(mbed-wifi ${CMAKE_LIBRARY_TYPE})

if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME AND BUILD_TESTING)
    # Add these subdirectories for tests
    add_subdirectory(cellular)
    add_subdirectory(drivers)
    add_subdirectory(FEATURE_BLE)
    add_subdirectory(libraries)
    add_subdirectory(lorawan)
    add_subdirectory(mbedtls)
    add_subdirectory(netsocket)
    add_subdirectory(nfc)
else()
    # The directories below contain optional target libraries
    add_subdirectory(FEATURE_BLE EXCLUDE_FROM_ALL)
    add_subdirectory(cellular EXCLUDE_FROM_ALL)
    add_subdirectory(drivers EXCLUDE_FROM_ALL)
    add_subdirectory(libraries EXCLUDE_FROM_ALL)
    add_subdirectory(lorawan EXCLUDE_FROM_ALL)
    add_subdirectory(lwipstack EXCLUDE_FROM_ALL)
    add_subdirectory(mbedtls EXCLUDE_FROM_ALL)
    add_subdirectory(nanostack EXCLUDE_FROM_ALL)
    add_subdirectory(netsocket EXCLUDE_FROM_ALL)
    add_subdirectory(nfc EXCLUDE_FROM_ALL)
endif()
